# sc-transport

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  SECURITY_CONTACTS.md  docker-compose.prod.yml  docker-compose.yml  import.sh  install.sh  sct.toml  sct.toml.example
.cargo/: config.toml
.github/: CODEOWNERS  ci-config.json  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  dependabot-smoke.yml  dependency-review.yml  experimental.yml  quality-gate.yml  release.yml  secret-scan.yml  wan-test.yml
benches/: latency.rs  packet_loss.rs  throughput.rs
crates/sc-transport-core/: Cargo.toml
crates/sc-transport-core/src/: lib.rs
crates/sc-transport-datagrams/: Cargo.toml
crates/sc-transport-datagrams/src/: lib.rs
crates/sc-transport-datagrams/tests/: datagram_delivery_no_loss.rs  datagram_fallback_trigger.rs
crates/sc-transport-probe/: Cargo.toml
crates/sc-transport-probe/src/: lib.rs
crates/sc-transport-quic/: Cargo.toml
crates/sc-transport-quic/src/: batch.rs  congestion.rs  lib.rs
crates/sc-transport-sse/: Cargo.toml
crates/sc-transport-sse/src/: lib.rs
crates/sct-bench/: Cargo.toml
crates/sct-bench/src/: main.rs
crates/sct-cli/: Cargo.toml
crates/sct-cli/src/: main.rs
crates/sct-core/: Cargo.toml
crates/sct-core/examples/: bench_transfer.rs
crates/sct-core/results/cf-A/: completion-campaign-summary.json
crates/sct-core/results/cf-B/: completion-campaign-summary.json
crates/sct-core/src/: lib.rs
crates/sct-core/src/adaptive/: mod.rs  optimization.rs  predictive.rs
crates/sct-core/src/compression/: mod.rs
crates/sct-core/src/congestion/: mod.rs
crates/sct-core/src/metrics/: mod.rs
crates/sct-core/src/protocol/: mod.rs
crates/sct-core/src/receiver/: mod.rs
crates/sct-core/src/sender/: mod.rs
crates/sct-core/src/transport/: mod.rs
crates/sct-core/tests/: common.rs  completion_campaign.rs  completion_first_ab.rs  delta_transfer.rs  e2e_loopback.rs  fec_recovery.rs  prompt5_integration.rs  transfer_smoke.rs
crates/sct-daemon/: Cargo.toml
crates/sct-daemon/.sct-daemon/: transfers.json
crates/sct-daemon/src/: main.rs
crates/sct-proto/: Cargo.toml
crates/sct-proto/src/: lib.rs
docs/: COMPATIBILITY-CONTRACT.md  DATAGRAM-SEMANTICS.md  DECISIONS.md  ECOSYSTEM.md  FALLBACK-BEHAVIOR.md  LIMITATIONS.md  MIGRATION-SYNAPTIC-CORE.md  NETWORK-EMULATION.md  PRODUCTION-READINESS-CHECKLIST.md  QUIC-BACKGROUND.md  QUIC-TUNING.md  WAN-CLOUD-CI.md  sct-daemon-ops.md  synaptic-core-migration.md
docs/RESULTS/: 2026-03-23-initial.md  2026-03-23-production-readiness-decision.md  2026-04-10-linux-netem-20pct.md  2026-04-10-linux-netem-5pct.md  2026-04-10-linux-netem-baseline.md  2026-05-16-benchmark-I-final.md  2026-05-16-benchmark-rerun.md  README.md  template.md
infra/aws/: README.md  cloud-init-receiver.sh  cloud-init-sender.sh  run_test.sh  start_wan_test.sh  teardown.sh
infra/flyio/: Dockerfile.sct  README.md  fly-receiver.toml  fly-sender.toml
infra/oracle/: cloud-init-receiver.sh  cloud-init-sender.sh  data.tf  main.tf  network.tf  outputs.tf  providers.tf  try_regions.sh  variables.tf  versions.tf
results/: README.md  competitive-baseline-matrix-D.json  competitive-baseline-matrix-D.md  competitive-baseline-matrix-F.json  competitive-baseline-matrix-F.md  competitive-baseline-matrix-F2.json  competitive-baseline-matrix-F2.md  competitive-baseline-matrix-G.json  competitive-baseline-matrix-G.md  competitive-baseline-matrix.json  competitive-baseline-matrix.md  completion-campaign-compare-2.json  completion-campaign-compare-2.md  completion-campaign-compare-3.md  completion-campaign-compare-4.json  completion-campaign-compare.json  completion-campaign-compare.md  streaming-matrix-compare-A-vs-B.json  streaming-matrix-compare-A-vs-B.md  streaming-matrix-compare-A2-vs-B2.json  streaming-matrix-compare-A2-vs-B2.md  streaming-matrix-compare-A3-vs-B3.json  streaming-matrix-compare-A3-vs-B3.md  streaming-matrix-compare-A4-vs-B4.json  streaming-matrix-compare-A4-vs-B4.md  streaming-matrix-compare-A5-vs-B5.json  streaming-matrix-compare-A5-vs-B5.md  streaming-matrix-compare-A6-vs-B6.json  streaming-matrix-compare-A6-vs-B6.md  streaming-matrix-compare-B-vs-D.json  streaming-matrix-compare-B-vs-D.md  streaming-matrix-compare-D-vs-F.json  streaming-matrix-compare-D-vs-F.md  streaming-matrix-compare-D-vs-F2.json  streaming-matrix-compare-D-vs-F2.md  streaming-matrix-compare-F2-vs-G.json  streaming-matrix-compare-F2-vs-G.md  streaming-matrix-compare.json  streaming-matrix-compare.md  streaming-matrix-summary-A.json  (+10 more)
results/A/: streaming-matrix-summary-md.json  streaming-matrix-summary.json  streaming-matrix.json
results/A2/: streaming-matrix-summary-md.json  streaming-matrix-summary.json  streaming-matrix.json
results/A3/: streaming-matrix-summary-md.json  streaming-matrix-summary.json  streaming-matrix.json
results/A4/: streaming-matrix-summary-md.json  streaming-matrix-summary.json  streaming-matrix.json
results/A5/: streaming-matrix-summary-md.json  streaming-matrix-summary.json  streaming-matrix.json
results/A6/: streaming-matrix-summary-md.json  streaming-matrix-summary.json  streaming-matrix.json
scripts/: ci-cli-daemon-smoke.sh  ci-transport-integration.sh  compare_bench_results.py  compare_completion_campaign.py  compare_streaming_matrix.py  competitive_baseline_matrix.py  export_offline_bundle.sh  import_offline_bundle.sh  netem_runner.sh  package_release_bundle.sh  project_streaming_volume.py  run-full-benchmark-rerun.sh  run-streaming-matrix-h-full.sh  test_sct_core_integration.sh  wan_test.sh  wan_test_flyio.sh
sct-rucio/: Dockerfile.daemon  Dockerfile.test  Makefile  docker-compose.yml  pyproject.toml  requirements-dev.txt  setup.py
sct-rucio/docker/: sct-daemon.toml
sct-rucio/sct_rucio/: __init__.py  plugin.py
sct-rucio/tests/: test_integration.py  test_plugin.py  test_rse_protocol.py
src/: lib.rs
(+42 files in other folders)
