[workspace]
members = [
    "crates/sc-transport-core",
    "crates/sc-transport-sse",
    "crates/sc-transport-quic",
    "crates/sc-transport-datagrams",
    "crates/sc-transport-probe",
    "crates/sct-core",
    "crates/sct-cli",
    "crates/sct-proto",
    "crates/sct-bench",
    "crates/sct-daemon",
]
resolver = "2"

[package]
name = "sc-transport"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Independent telemetry transport layer for Synaptic Core"

[features]
default = ["transport-sse"]
transport-sse = ["dep:sc-transport-sse"]
transport-quic = ["dep:sc-transport-quic", "sc-transport-quic/quic-streams"]
transport-datagrams = ["dep:sc-transport-datagrams", "sc-transport-datagrams/quic-datagrams"]
probe = ["dep:sc-transport-probe"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Synaptic Four"]
repository = "https://github.com/SynapticFour/sc-transport"

[workspace.dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread", "sync", "time"] }
rmp-serde = "1"
tokio-stream = "0.1"
thiserror = "2"
criterion = { version = "0.5", features = ["html_reports"] }

[dependencies]
sc-transport-core = { path = "crates/sc-transport-core" }
sc-transport-sse = { path = "crates/sc-transport-sse", optional = true }
sc-transport-quic = { path = "crates/sc-transport-quic", optional = true }
sc-transport-datagrams = { path = "crates/sc-transport-datagrams", optional = true }
sc-transport-probe = { path = "crates/sc-transport-probe", optional = true }

[dev-dependencies]
criterion = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rcgen = "0.14"

[[test]]
name = "sse_basic"
path = "tests/integration/sse_basic.rs"

[[test]]
name = "sse_fallback"
path = "tests/integration/sse_fallback.rs"
required-features = ["transport-quic"]

[[test]]
name = "quic_stream_basic"
path = "tests/integration/quic_stream_basic.rs"
required-features = ["transport-quic"]

[[test]]
name = "quic_stream_reconnect"
path = "tests/integration/quic_stream_reconnect.rs"
required-features = ["transport-quic"]

[[test]]
name = "datagram_delivery_no_loss"
path = "tests/integration/datagram_delivery_no_loss.rs"
required-features = ["transport-datagrams"]

[[test]]
name = "datagram_delivery_5pct_loss"
path = "tests/integration/datagram_delivery_5pct_loss.rs"
required-features = ["transport-datagrams"]

[[test]]
name = "datagram_delivery_20pct_loss"
path = "tests/integration/datagram_delivery_20pct_loss.rs"
required-features = ["transport-datagrams"]

[[test]]
name = "datagram_fallback_trigger"
path = "tests/integration/datagram_fallback_trigger.rs"
required-features = ["transport-datagrams"]

[[test]]
name = "transport_transparency"
path = "tests/integration/transport_transparency.rs"
required-features = ["transport-quic", "transport-datagrams"]

[[test]]
name = "wan_simulation"
path = "tests/integration/wan_simulation.rs"
required-features = ["transport-quic", "transport-datagrams"]

[[test]]
name = "streaming_matrix"
path = "tests/integration/streaming_matrix.rs"
required-features = ["transport-quic", "transport-datagrams"]

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "packet_loss"
harness = false
required-features = ["transport-datagrams"]
