[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sct-rucio"
version = "0.1.0"
description = "Rucio TransferTool and RSE Protocol plugin for sc-transport"
license = {text = "BUSL-1.1"}
requires-python = ">=3.9"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.entry-points."rucio.transfertools"]
sct = "sct_rucio.plugin:SctTransferTool"

[tool.setuptools.packages.find]
where = ["."]
include = ["sct_rucio*"]
