[package]
name = "sc-transport-datagrams"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Experimental QUIC datagram transport for Synaptic Core telemetry"

[features]
default = []
quic-datagrams = ["dep:quinn", "dep:rustls", "dep:rcgen"]

[dependencies]
sc-transport-core = { path = "../sc-transport-core" }
sc-transport-sse = { path = "../sc-transport-sse" }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rmp-serde = { workspace = true }
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std", "tls12"] }
rcgen = { version = "0.13", optional = true }

[dev-dependencies]
sc-transport-quic = { path = "../sc-transport-quic" }
