[package]
name = "sc-transport-quic"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Optional QUIC stream transport for Synaptic Core telemetry"

[features]
default = []
quic-streams = ["dep:quinn", "dep:rustls", "dep:rcgen"]

[dependencies]
sc-transport-core = { path = "../sc-transport-core" }
sc-transport-sse = { path = "../sc-transport-sse" }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std", "tls12"] }
rcgen = { version = "0.13", optional = true }
