[package]
name = "sc-transport-sse"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
license-file = "../../LICENSE"
description = "Stable SSE transport implementation for sc-transport"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
rmp-serde = { workspace = true }
futures = { workspace = true }
sc-transport-core = { path = "../sc-transport-core" }
