[package]
name = "sct-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "CLI for SPARQ scientific transport."

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sct-core = { path = "../sct-core" }
serde_json = "1"

[[bin]]
name = "sct"
path = "src/main.rs"
