[package]
name = "sct-daemon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SPARQ daemon and REST API service."

[dependencies]
anyhow = "1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
sct-core = { path = "../sct-core" }
prometheus = "0.13"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
blake3 = "1"

[[bin]]
name = "sct-daemon"
path = "src/main.rs"
