[package]
name = "sct-proto"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
license-file = "../../LICENSE"
description = "SPARQ protocol message definitions for sc-transport."

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
